--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,13 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-04-27T12:11:35.373184Z",
+     "start_time": "2025-04-27T12:11:24.826240Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from ltc.trainer import FileBinaryClassifierTrainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "pos_data = './data/pos'\n",
+    "neg_data = './data/neg'\n",
+    "trainer = FileBinaryClassifierTrainer(\n",
+    "    model_name='logistic_regression_example',\n",
+    "    max_length=4000,\n",
+    "    num_epochs=1000\n",
+    ")\n",
+    "model = trainer.train(pos_data, neg_data)\n",
+    "trainer.save(model)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8b441028a169b686"
   }
  ],
  "metadata": {
