--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-27T12:11:35.373184Z",
-     "start_time": "2025-04-27T12:11:24.826240Z"
+     "end_time": "2025-04-27T12:22:59.714216Z",
+     "start_time": "2025-04-27T12:22:59.699217Z"
     }
    },
    "outputs": [],
@@ -31,9 +31,14 @@
     "trainer.save(model)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2025-04-27T12:22:59.715224Z"
+    }
    },
-   "id": "8b441028a169b686"
+   "id": "8b441028a169b686",
+   "execution_count": null
   }
  ],
  "metadata": {
