--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -18,7 +18,24 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "pos_data = './data/pos'\n",
     "neg_data = './data/neg'\n",
@@ -32,13 +49,13 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2025-04-27T12:22:59.715224Z"
+     "end_time": "2025-04-27T12:26:05.539230Z",
+     "start_time": "2025-04-27T12:24:57.022772Z"
     }
    },
    "id": "8b441028a169b686",
-   "execution_count": null
+   "execution_count": 6
   }
  ],
  "metadata": {
