优化日志显示

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2025-04-27T12:22:59.714216Z",
-     "start_time": "2025-04-27T12:22:59.699217Z"
+     "start_time": "2025-04-27T12:33:50.458415Z"
     }
    },
    "outputs": [],
@@ -18,24 +18,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pos_data = './data/pos'\n",
     "neg_data = './data/neg'\n",
@@ -49,13 +32,10 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-04-27T12:26:05.539230Z",
-     "start_time": "2025-04-27T12:24:57.022772Z"
-    }
+    "is_executing": true
    },
    "id": "8b441028a169b686",
-   "execution_count": 6
+   "execution_count": null
   }
  ],
  "metadata": {
