--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -5,15 +5,11 @@
    "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "is_executing": true,
-    "ExecuteTime": {
-     "start_time": "2025-04-27T12:33:50.458415Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from ltc.trainer import FileBinaryClassifierTrainer"
+    "from lotc.trainer import FileBinaryClassifierTrainer"
    ]
   },
   {
@@ -32,7 +28,10 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-04-27T12:37:35.432287Z",
+     "start_time": "2025-04-27T12:37:35.432287Z"
+    }
    },
    "id": "8b441028a169b686",
    "execution_count": null
