--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-04-27T13:10:27.317581Z",
+     "start_time": "2025-04-27T13:10:27.301587Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,11 +31,7 @@
     "trainer.save(model)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-04-27T12:37:35.432287Z",
-     "start_time": "2025-04-27T12:37:35.432287Z"
-    }
+    "collapsed": false
    },
    "id": "8b441028a169b686",
    "execution_count": null
