--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2025-04-27T13:19:59.743102Z",
-     "start_time": "2025-04-27T13:19:55.735466Z"
+     "start_time": "2025-04-27T13:24:17.857886Z"
     }
    },
    "outputs": [],
@@ -18,89 +18,25 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG] 2025-04-27 21:19:59,771 lotc.embedding : Embedding \"#章节 01某天喝多，我把不苟言笑，禁欲系的老板当成了白月光。一觉醒来，我紧张问：「昨天……我们……」他答：「怎么，江秘书不打算负责？」我觉得我要死了，肯定要被炒鱿鱼了，可老板却说放我一周的假让我好好休息休息。一周后他把我堵墙角，问道：「给了你一周时间，想...\".\n",
-      "[DEBUG] 2025-04-27 21:20:03,778 lotc.embedding : Embedding \"#章节 01白月光一回来，陆景盛立马跟我提了离婚，我把孕检单塞进包包，强忍着泪意签下离婚协议：「既然这样，那我们好聚好散。」房子，车子，钱，资源……他都可以给我，唯独名分和爱，他永远只能给她。1、结婚三周年纪念日，当我满心欢喜想把怀孕的消息告诉他时，他先递...\".\n",
-      "[DEBUG] 2025-04-27 21:20:09,452 lotc.embedding : Embedding \"#章节 01我是老板的秘书，掌管着他的后宫，人送外号大内总管刘莲英。直到有一天，我发现了这个后宫里最核心的机密。我感到，发财的机会来了。1「林小姐，卡里有 100 万，蒋先生希望你们好聚好散——」我刚将银行卡递过去，对面的林盈盈已经泪盈于睫。凭良心讲，她是...\".\n",
-      "[DEBUG] 2025-04-27 21:20:13,054 lotc.embedding : Embedding \"#章节 01「我不想做你哥哥了。」许冽说这句话的时候，格外认真，甚至连单膝下跪的动作，都是我理想中的模样。然而，拜他所赐，我成了他哥哥的玩物。1我是个孤女，自小便作为许冽的玩伴，被许家收养。我从未想过高攀，却不想许冽早早便向我求婚。订婚宴后，新闻报道满天飞...\".\n",
-      "[DEBUG] 2025-04-27 21:20:17,786 lotc.embedding : Embedding \"#章节 01「还有人……」说出这句话的时候。慕江行染着凉意的手已经探入了我衣服里。我脑袋烧得昏沉，注意到周围有人，有些难为情地伸出手拽住了他。「哪儿疼？」慕江行侧身挡住旁人的视线，指骨抵在我小腹，我立刻疼得哽咽起来。这叫声，太矫情了。尤其还是在慕江行的面前...\".\n",
-      "[DEBUG] 2025-04-27 21:20:22,022 lotc.embedding : Embedding \"#章节 011我第一次遇到宋澈，是在爸爸的好友宋叔叔家。那是我最喜欢的下雪天，因为这样我就有理由不跟那些熊孩子出去玩，一个人窝在沙发上看电视剧。但是，总有小孩不消停，让人看剧都不得安生！「你给我出去！」「打他！」院子里吵吵嚷嚷，我烦得不行，刚打开门就挨了一...\".\n",
-      "[DEBUG] 2025-04-27 21:20:25,995 lotc.embedding : Embedding \"#章节 01我从没想到有一天会找个小我十岁的男朋友，家世不错、相貌英俊，体力出众。可我这种人生性凉薄，无法长情。我坑了他的妈，他的爸，他的钱，让他一无所有。可他依旧爱我。我在他眼里是蛇蝎，也是天仙。1如果说找个比自己小十岁的男朋友有什么坏处，那就是骨头经常...\".\n",
-      "[DEBUG] 2025-04-27 21:20:29,464 lotc.embedding : Embedding \"#章节 011黑暗。死寂的黑暗。空气安静得只能听见自己的心跳声，扑通，扑通。我瞪大双眼，但什么也看不到。我挣扎着想要逃脱，但四肢完全无法动弹。唯一能动的就是我的眼珠，它惊慌地转动着，想要寻觅黑暗中的怪物，然后远远地逃离。冰凉的触感慢慢滑了上来，从脚到腿，再...\".\n",
-      "[DEBUG] 2025-04-27 21:20:32,919 lotc.embedding : Embedding \"#章节 01前男友搬到了我的对门，见面第一天我正好做了个小手术回来，七天没洗头。而他还是那副人模狗样，帅得让我胎动。江季上上下下地扫了我一眼，笑得温柔又讽刺：「还是一点儿没变。」我七天没吃口好的，想也知道自己脸色蜡黄，当初住院图方便，甚至是穿着睡衣去的。气...\".\n",
-      "[DEBUG] 2025-04-27 21:20:36,375 lotc.embedding : Embedding \"#章节 01我的男朋友在订婚前几个月突然失踪了，我疯了一样找了他两年。再见面的时候，他却已经成了顶级富二代，还多了一个「青梅竹马」。我气得要死，趁他去男厕的时候，甩开周围寒暄的人尾随过去，却被他摁在门上警告：「别招惹我。」「我们没有分手，你是我的。」我看着...\".\n",
-      "[DEBUG] 2025-04-27 21:20:39,866 lotc.embedding : Embedding \"#章节 01相爱十年，我陪男友白手起家。可他却告诉我，他想给白月光一个家。1外面的暴雨停了，我发给韩博的消息还是没有回。公司的助理小王偷偷告诉我说韩总买了 DR 的钻戒，这两天还在抓紧时间布置求婚现场。「今天这种大雨，应该先回家才对啊！」我坐在梳妆台前擦着...\".\n",
-      "[DEBUG] 2025-04-27 21:20:43,907 lotc.embedding : Embedding \"#章节 01我暗恋邻家哥哥许久。这天，哥哥主动找我，要把他亲弟弟介绍给我。我苦笑，谁不知道同父异母的弟弟是他最讨厌的人啊。1炎炎夏日，中央球场上正在举行着一场篮球赛。所有人都在关心着比赛的结果，只有我死死地盯住了一个人。穿着 7 号球衣的唐铭敏捷地接过队友...\".\n",
-      "[DEBUG] 2025-04-27 21:20:47,369 lotc.embedding : Embedding \"#章节 01我和陈琰分手了。所有人都在等着我求他复合。隔天，我毫不留恋的将陈琰有关的东西打包发了邮政。听说，陈琰他慌了！1和陈琰分手那天是个雨夜。我没带伞，给陈琰打电话他没接，结果我淋成落汤鸡到了家，却收到了陈琰发来的微信，原来他给他的小青梅送伞了。何其荒...\".\n",
-      "[DEBUG] 2025-04-27 21:20:50,797 lotc.embedding : Embedding \"#章节 01一个月前，我买了一辆凶车，二手宝马，落地价五十多万的车，开了一年，被我二十万买了下来。 我以为自己捡了个大便宜，可没想到，那车到我手上后怪事频出。比如我一个人开车在路上走着，仪表盘上忽然提示副驾没系安全带。 有几次我正听着歌，音质忽然就不好了，...\".\n",
-      "[DEBUG] 2025-04-27 21:20:54,233 lotc.embedding : Embedding \"#章节 01喝醉后拐了个海王弟弟回家，撞上我妈带着新男友回来。弟弟把我堵在卧室：「听我爸和你妈的墙角，刺激吗，姐姐？」1大学毕业的聚餐上，我喝得半醉，从隔壁包厢拐了个年轻小男孩回家。长得倒挺不错，就是不干人事，年纪轻轻就学人家海王养鱼。要不是他养鱼养到我闺...\".\n",
-      "[DEBUG] 2025-04-27 21:20:58,385 lotc.embedding : Embedding \"#章节 011半夜两点，我在男朋友手机里看到两条消息。「除了你，别人都是将就。」「只要你开口，我马上去你身边。」多深情，可惜不是发给我的。我手一抖，手机掉在地上，眼泪也跟着涌了出来。两条消息，孤零零地躺在聊天界面上，连个回应都没有，好像在嘲笑我。你看，你一...\".\n",
-      "[DEBUG] 2025-04-27 21:21:02,145 lotc.embedding : Embedding \"《上流社会准则》林岁欢 俞景川第1章　　和俞景川联姻三年，林岁欢日子过得还算舒心，哪怕俞景川为人冷漠，但他和圈子里的男人不同，私生活干净。　　直到有一天，林岁欢发现俞景川和一个女大学生打得火热。　　……　　一觉醒来，林岁欢床上多了一个男人。　　关键是，这个...\".\n",
-      "[DEBUG] 2025-04-27 21:21:05,576 lotc.embedding : Embedding \"《你之蜜糖，我之砒霜》乔诗蔓1　　乔诗蔓和姐姐同时结婚，嫁的还是一对双胞胎兄弟。　　可姐夫在一次执行任务时意外离世了。　　婆婆哭得肝肠寸断，然后提出了让姐姐跟乔诗蔓的老公借种生子。　　......　　“我得给老大留个后！”婆婆抹着眼泪道：“诗蔓，算是妈求你...\".\n",
-      "[DEBUG] 2025-04-27 21:21:10,559 lotc.embedding : Embedding \"《所爱之人，目光皆是他人》黎君 霍司寒第一章　　“你要援非！”　　“就因为霍司寒下班回家晚了1小时？”　　闺蜜肖美的一嗓子，引得大家纷纷驻足。　　黎君：“我心意已决。”　　肖美犹豫道。　　“霍司寒一个从不参加应酬，每晚7点回家，恨不得24小时贴身的宠妻狂魔...\".\n",
-      "[DEBUG] 2025-04-27 21:21:18,972 lotc.embedding : Embedding \"丁克老公带回一对龙凤胎，还要我把百亿财产交给他们老公要我挖了子宫和他一起丁克，十年后，他却领养回一对龙凤胎，叫我悉心抚养他们成材。我点头，从此认真抚养这对龙凤胎，十八岁那年，他们考上了清北。升学宴上，老公递给我一份财产转让书，要我把所有财产转到龙凤胎名下。...\".\n",
-      "[DEBUG] 2025-04-27 21:21:22,958 lotc.embedding : Embedding \"七年时分1.光着脚走进市区的那天，我上了新闻。陆家养女，被绑架数月，穿着破烂的衣服，又脏又臭，光着满是伤痕的脚，狼狈地逃了回来，像狗一样。我看着媒体们的闪光灯冲着我，争分夺秒地抓拍，而我的心早就如同死水一般，再也无法惊起一丝波澜。从前的时心死了，那个光鲜亮...\".\n",
-      "[DEBUG] 2025-04-27 21:21:28,790 lotc.embedding : Embedding \"丈夫和兄弟下注千万，赌我肚子里的孩子是谁的从来不同意跟我生孩子的钟明澈忽然发了狠，要了我三天三夜，没有做任何避孕措施。我以为他终于接受我了，红着脸拿着验孕棒去告诉他好消息，却在公司休息室听见他和小青梅，还有他两个兄弟笑成一片。“你们太宠我啦，我只是好奇这样...\".\n",
-      "[DEBUG] 2025-04-27 21:21:32,322 lotc.embedding : Embedding \"丈夫装穷七年，我和儿子不要他了第1章　　和沈知凛结婚七年，因为穷，我和儿子在晚上偷偷捡瓶子。　　儿子捡得又快又多，每次捡完都仰着小脸小声问我。　　“妈妈，我们攒的钱够和爸爸一起去游乐园了吗？”　　沈知凛节俭寡言，常常以没钱为由拒绝儿子的乞求。　　但这天，我...\".\n",
-      "[DEBUG] 2025-04-27 21:21:36,669 lotc.embedding : Embedding \"不存在的幼儿园老师第一章刚回到家，儿子的班级群就有家长怒问：“张老师，你们幼儿园是什么阿猫阿狗都能当老师了吗？”“我女儿一到家，就拿着两根筷子要从阳台跳下去，说是不二老师教的！”班主任急的连忙否认，说幼儿园根本没有不二老师。说着还把老师的上课表单发在了群里...\".\n",
-      "[DEBUG] 2025-04-27 21:21:40,656 lotc.embedding : Embedding \"且停且忘且随风1“简南乔，你说真的？和我联姻？”“不愿意算了。”简南乔出神地盯着窗外，说出的话也无波无澜。“别！我愿意！”电话那头的洛闻舟声音带着掩饰不住的喜悦，但又有些忐忑。“你不是......喜欢傅斯煜那家伙喜欢的要命吗？而且傅斯煜刚和你求完婚，你确定...\".\n",
-      "[DEBUG] 2025-04-27 21:21:44,720 lotc.embedding : Embedding \"中秋节，打脸装可怜的妈妈1我妈遇事就爱装可怜。中秋节全家出门旅游。她想当然的以为景区的招财挂件无人清点。所以顺手摘了一个塞进了我的背包。害我直接在景区闹上了热搜。被月薪八万的大厂辞退。她装可怜说：「我还不是为了这个家能结交好运？」新公司入职体检。我妈弄丢了...\".\n",
-      "[DEBUG] 2025-04-27 21:21:49,114 lotc.embedding : Embedding \"为假死丈夫守寡三年后，我带儿子嫁给他首长第1章婚后五年，丈夫突发哮喘去世，留下我和儿子孤苦伶仃。朋友惋惜我年纪轻轻就成了寡妇，父母也劝我赶紧带着儿子改嫁。我却坚决不同意，执意留下来为丈夫守孝。可就在丈夫三周年那天，我却意外听到公公愤怒地质问大伯：“明明患有...\".\n",
-      "[DEBUG] 2025-04-27 21:21:52,788 lotc.embedding : Embedding \"为圆白月光的婚礼梦，老公要我失忆第1章 1苏宴礼向来深情。可白月光得癌症那天，他却给我递上了能令人失忆的药丸。“沐沐，夏清马上要死了，你给我三天时间，我圆她一个婚礼梦。”“我不会惹你伤心，这药能让人短暂失忆，等三天后我和她的婚礼结束，你吃下解药就会重新爱上...\".\n",
-      "[DEBUG] 2025-04-27 21:21:57,408 lotc.embedding : Embedding \"为家族抽生死签坐牢三十年，出狱后儿女让我滚1踏出监狱大门时，我已经五十五岁了。我用狱警赞助的二十元，打车回到了儿子家。然而，儿子却直接让我滚，声称杀人犯不配当他爹。无奈下，我又找到了女儿。女儿收留了我，只因为她忙着和老公去度蜜月，没人照顾她的狗。狗吃的是山...\".\n",
-      "[DEBUG] 2025-04-27 21:22:00,868 lotc.embedding : Embedding \"九十九次原谅第一章我老婆曾经有多爱我呢？当年为了能嫁给我，单是求婚，她就求了九十九次。直到第一百次，我终于被她的坚韧打动。新婚当天，我给了她九十九张和好券。约定只要这些和好券没用完，我就会一直陪在她身边。结婚五年，她每出去陪一次白月光，就会用完一张和好券。...\".\n",
-      "[DEBUG] 2025-04-27 21:22:04,589 lotc.embedding : Embedding \"也曾偷藏欢喜1京大年度最炸裂的大瓜，就是艺术系乔喜的初夜视频被发到了校园群里。视频是在五星酒店的总统套房里拍的。乔喜不着寸缕，被高她一头的男人压在落地窗前，律动声不绝于耳。结束后，男人抵在她耳边说了句“真乖”。短短两个字，却如一颗重磅炸弹，在群里激起惊涛骇...\".\n",
-      "[DEBUG] 2025-04-27 21:22:08,037 lotc.embedding : Embedding \"云卷云舒花似梦和陈昭订婚的第三年，他在国外找了一个漂亮的赛车宝贝。情人节前一天，他专门带着女孩找我退婚。“我和夏黎兴趣相同，像你这样的温室花朵，永远也不会了解赛车的魅力。”我不甘心地问：“非要今天吗？”他笑了，“退婚还需要看日子呀？”我点头，没再纠缠。只是...\".\n",
-      "[DEBUG] 2025-04-27 21:22:12,508 lotc.embedding : Embedding \"五一假期，我送渣男一家上路第1章五一假期，老公提议全家去自驾游，他们一家合力制造我意外失足坠崖。只为了我手里那张还没兑换的巨奖彩票。我死后，灵魂飘在半空，看着老公一家花着我的钱，走上人生巅峰。儿子还喊老公的白月光做“妈妈”，原来养了五年的儿子不是我亲生的。...\".\n",
-      "[DEBUG] 2025-04-27 21:22:16,792 lotc.embedding : Embedding \"五年恩爱，一朝散尽第1章我是黑道大佬的女人。婚后他把我宠上天，向各大媒体秀恩爱。我以为他爱我入骨。忍不住向全世界宣告对我的爱意。直到我听到他和手下的对话：“我在黑白两道混，仇家那么多，如果不把沈依然塑造成我的软肋，瑶瑶怎么可能安全？”原来我为他受的那些伤，...\".\n",
-      "[DEBUG] 2025-04-27 21:22:21,111 lotc.embedding : Embedding \"五年无性婚姻，老婆将我送上拍卖会第1章结婚五年，每次我不小心碰到老婆的皮肤，她都会罚我跪在消毒水里背《男德》。直到有次，我看到她锁骨上印着暧昧的红痕，下意识伸手摸了一下。虽然她发了脾气砸门出去，却出乎意料地没有叫我罚跪。我天真地以为她渐渐接受了我的触碰。可...\".\n",
-      "[DEBUG] 2025-04-27 21:22:25,518 lotc.embedding : Embedding \"产检报告一切正常，全家却都盼着我去死正文第一章孕四月，妇产科的老公陪我取孕检报告。他嘴角的笑在看到报告的瞬间僵在了脸上，强行拉着我要去堕胎。我愣在原地，刚才主治医生分明说胎儿很健康！我挣开他的手质问，“为什么要堕胎？！”他没回答，但已经为我预约好了人流手术...\".\n",
-      "[DEBUG] 2025-04-27 21:22:28,923 lotc.embedding : Embedding \"亲哥哥不是我的哥哥我十岁生日那天，爸妈永远离开了我。我被哥哥赶出家门住校，一住就是八年，哥哥对我恨之入骨。死在手术台上时，哥哥正在隔壁将我的脑换给他领养的妹妹。他对我说的最后一句话是：“这次是吐血还是晕倒？我警告你没死就少来烦我！”电话挂断前，我听见哥哥在...\".\n",
-      "[DEBUG] 2025-04-27 21:22:32,551 lotc.embedding : Embedding \"﻿亲女儿被资助两年的养女欺凌后，我杀疯了作者：一头大蠢驴简介：国外出差一年，突然收到女儿发来的自拍照。　　“爸爸，妮妮想你了。”　　我以为她是因为想我才闷闷不乐，正准备回复安慰她，却被她领口的一道划痕引起了注意。　　把相片放大一看，才发现不止她脖子位置有抓...\".\n",
-      "[DEBUG] 2025-04-27 21:22:36,024 lotc.embedding : Embedding \"人面桃花长相忆第一章“我想好了，谢家那个植物人，我来嫁。”阮雾梨倚在阮家老宅的门框上，红唇勾起一抹讥诮的弧度。阮父手中的雪茄差点掉在价值连城的波斯地毯上，他猛地从真皮座椅上直起身，眼角的皱纹都舒展开来：“雾梨，你想通了？太好了！谢家那边催得紧，半个月内就得...\".\n",
-      "[DEBUG] 2025-04-27 21:22:39,432 lotc.embedding : Embedding \"住了一晚酒店后，我成了小视频女主角我跟老公吵架搬去了酒店，没想到住了一晚就火遍全网。视频里我面色潮红，和八个不同的男人在房间跳舞。沈嘉航气急败坏，一巴掌打到我的脸上。“这就是你说的要出去冷静冷静？真踏马的脏！”我无法解释身上的痕迹，又羞又恼选择报警。警察说...\".\n",
-      "[DEBUG] 2025-04-27 21:22:43,065 lotc.embedding : Embedding \"余温散尽时第一章一场车祸后，许思梨失忆了。她记得所有人，唯独忘了沈辞越。守了几天的闺蜜沈语宁发现她是真的不记得这个名字后，神色骤变。“梨梨，现在这里就我们两个，你告诉我，这是你想的新的欲擒故纵的手段，想吸引我哥的注意力是不是？”许思梨不明所以，眼里满是诧异...\".\n",
-      "[DEBUG] 2025-04-27 21:22:46,845 lotc.embedding : Embedding \"你是我写了一半的情书第1章杜轻语和江望从小就不对付。偏偏那一年，圈内适龄的联姻对象只剩下他们两个。杜轻语声称死了都不会嫁江望。江望忽然来了兴趣，“那我娶定了，你快去死吧。”婚礼当天，杜轻语放了数十只鸭羞辱江望。他面无表情，抓起一只鸭喊它老婆。杜轻语顿时没了...\".\n",
-      "[DEBUG] 2025-04-27 21:22:50,341 lotc.embedding : Embedding \"你的爱，我不要了﻿第1章“老师，我考虑好了，我接受奥地利乐团的邀约。”电话那边，李老师的笑声难掩盖欣喜。“终于想通了？我马上给你安排，我的学生就该知道，爱情和前途，应该怎么选择，一周时间，好好跟朋友道别。”顾安城低低应声，挂断电话，与生活了20多年的顾家，...\".\n",
-      "[DEBUG] 2025-04-27 21:22:54,065 lotc.embedding : Embedding \"像春天原谅了所有雪每一个结婚纪念日，顾时都会从外面带一个女人回家，美名其曰让我调教。十周年纪念日晚宴上，顾时带回来的是一个穿着兔女郎情趣衣的KTV小妹。“她没有礼服，你把你那件结婚礼服给她穿，还有上次我送你的那套珠宝也给她，至于鞋，我看你脚上这双就不错。”...\".\n",
-      "[DEBUG] 2025-04-27 21:23:00,151 lotc.embedding : Embedding \"儿子在水里窒息挣扎时，游泳冠军的老婆在和白月光选泳衣只因三岁的儿子游泳时不小心踢到了老婆的白月光，游泳冠军的老婆就把他强制按在水下说要练习憋气。在场的众人急切地想跳下水救儿子上来，却被老婆拦住。眼见孩子也在水里挣扎的动作越来越小。我跪在地上不停地求她放孩子...\".\n",
-      "[DEBUG] 2025-04-27 21:23:06,055 lotc.embedding : Embedding \"儿子被打死后，我高举军功章讨公道1儿子被霸凌而死，害死他的凶手却逍遥法外。学校劝我认栽，亲友让我拿钱了事，对方家属却串通媒体造谣将脏水泼在我儿子身上。他们趾高气昂地放话，自己手眼通天，捏死我们就像捏死一只蚂蚁。求助无门的我，望着被带节奏的网友向我涌来的无数...\".\n",
-      "[DEBUG] 2025-04-27 21:23:11,883 lotc.embedding : Embedding \"允你余生自由婚礼前三天，我被人开车撞断了脊椎。许如烟将肇事者送进监狱。我躺在病床上因为残废的噩耗不愿醒来。意识模糊间，却听见许如烟跟医生的交谈。“许总，现在进行手术救治还来得及，再晚几天，陆先生就真的只能一辈子当残废了！你不过是想让林枫当你的新郎，何必背上...\".\n",
-      "[DEBUG] 2025-04-27 21:23:18,012 lotc.embedding : Embedding \"兄弟总能比我多赚十倍的钱大学毕业后，我潜心创业，兄弟林枫却总能比我轻松多赚十倍的钱。我赚一千，他赚一万；我赚十万，他赚百万。没日没夜工作一整年，我终于攒到一百万，他转头就能在朋友圈秀出一千万存款。妻子对此破口大骂，嫌弃我是个没本事的窝囊废。我努力到每天睡觉...\".\n",
-      "[DEBUG] 2025-04-27 21:23:25,463 lotc.embedding : Embedding \"冷战第三个月，我一跃而下和影帝男友冷战第三个月，我们受邀参加综艺，要求打电话给最爱的人。他赌气打给助理林冉，全网磕疯。我则拨通未知号码，打给异世界的妈妈，全网群嘲。裴律讥笑。「你是个孤儿，哪儿来的妈？为了充面子连母亲都能找人假扮，真没下限！」我没说话，在他...\".\n",
-      "[DEBUG] 2025-04-27 21:23:28,875 lotc.embedding : Embedding \"医你心难安宁（版本二）大兴寺拜佛的第六年，我见到了29岁的自己。一个跟我长得一模一样，自称是未来自己的灵魂。香火缥缈间，她特别郑重地告诫：“离江宁佑远一点。”时隔六年听到前男友的名字，我只觉得陌生又遥远，还有一点荒谬。我与江宁佑六年没见过，没说过话，还要怎...\".\n",
-      "[DEBUG] 2025-04-27 21:23:35,049 lotc.embedding : Embedding \"十年爱情终湮灭第1章#妈妈心脏病复发需要钱救命。我鼓足勇气才决定去找身价过亿且隐恋十年的男朋友借钱。可我还未来得急开口，便被男友冷着脸训斥。他得力的女秘书当即把我请出会议室外等待。一等便是八个小时。直到医院打来了妈妈的死亡通知电话。男友好似才想起我，让女秘...\".\n",
-      "[DEBUG] 2025-04-27 21:23:40,569 lotc.embedding : Embedding \"却将烟雨送黄昏第一章和哥哥相依为命的第十八年，他死了。死在京圈大小姐的私人游艇上，理由是，不小心弄脏了她的裙子。她素来骄纵，当场就命人将他活生生打碎骨头，扔进了海底喂鱼。尸体打捞上来时，早已破碎不堪。我不哭不闹，只做了两件事。第一，打听到那位京圈大小姐最爱...\".\n",
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pos_data = './data/pos'\n",
     "neg_data = './data/neg'\n",
     "trainer = FileBinaryClassifierTrainer(\n",
     "    model_name='logistic_regression_example',\n",
     "    max_length=4000,\n",
-    "    num_epochs=1000\n",
+    "    num_epochs=1000,\n",
+    "    train_loss_threshold=20\n",
     ")\n",
     "model = trainer.train(pos_data, neg_data)\n",
     "trainer.save(model)"
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-04-27T13:23:46.795707Z",
-     "start_time": "2025-04-27T13:19:59.745092Z"
-    }
+    "is_executing": true
    },
    "id": "8b441028a169b686",
-   "execution_count": 2
+   "execution_count": null
   }
  ],
  "metadata": {
