--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "from lotc.embedding import long_text_embedding\n",
     "model = trainer.load(model)\n",
-    "model.predict(long_text_embedding('这是一个测试文本', max_length=4000, chunk_size=256))"
+    "model.predict(long_text_embedding('这是一个测试文本.', max_length=4000, chunk_size=256))"
    ],
    "metadata": {
     "collapsed": false,
