--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "model = trainer.train(pos_data, neg_data)"
+    "trainer.train(pos_data, neg_data)"
    ],
    "metadata": {
     "collapsed": false
