--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -6,30 +6,34 @@
    "source": [
     "from lotc.trainer import FileBinaryClassifierTrainer\n",
     "\n",
-    "pos_data = './data/pos'\n",
-    "neg_data = './data/neg'\n",
     "trainer = FileBinaryClassifierTrainer(\n",
-    "    model_name='logistic_regression_example',\n",
-    "    max_length=4096,\n",
-    "    num_epochs=20,\n",
-    "    train_loss_threshold=4\n",
+    "    max_length=1024,\n",
+    "    chunk_size=256,\n",
+    "    batch_size=4,\n",
+    "    train_ratio=0.9\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-27T16:06:39.899561Z",
-     "start_time": "2025-04-27T16:06:39.888029Z"
+     "end_time": "2025-04-28T15:10:52.938390Z",
+     "start_time": "2025-04-28T15:10:28.228907Z"
     }
    },
    "id": "8b441028a169b686",
-   "execution_count": 23
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "trainer.train(pos_data, neg_data)"
+    "from lotc.util.read_file import get_files, read_file\n",
+    "\n",
+    "pos_data_path = './data/pos'\n",
+    "neg_data_path = './data/neg'\n",
+    "pos_data = [read_file(x) for x in get_files(pos_data_path)]\n",
+    "neg_data = [read_file(x) for x in get_files(neg_data_path)]\n",
+    "model = trainer.train(pos_data, neg_data, num_epochs=20, learning_rate=2e-5)"
    ],
    "metadata": {
     "collapsed": false
@@ -41,10 +45,11 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "trainer.save()"
+    "model.save()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    },
    "id": "fae72c7ed78dd895",
    "execution_count": null
@@ -54,7 +59,8 @@
    "outputs": [],
    "source": [
     "from lotc.embedding import long_text_embedding\n",
-    "model = trainer.load()\n",
+    "\n",
+    "model = model.load()\n",
     "model.predict(long_text_embedding('这是一个测试文本.', max_length=4096, chunk_size=256)[1])"
    ],
    "metadata": {
