update: 更新测试脚本

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -16,12 +16,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-28T15:10:52.938390Z",
-     "start_time": "2025-04-28T15:10:28.228907Z"
+     "end_time": "2025-04-28T15:15:57.398293Z",
+     "start_time": "2025-04-28T15:15:57.386548Z"
     }
    },
    "id": "8b441028a169b686",
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -31,8 +31,8 @@
     "\n",
     "pos_data_path = './data/pos'\n",
     "neg_data_path = './data/neg'\n",
-    "pos_data = [read_file(x) for x in get_files(pos_data_path)]\n",
-    "neg_data = [read_file(x) for x in get_files(neg_data_path)]\n",
+    "pos_data = [read_file(x) for x in get_files(pos_data_path)[:2]]\n",
+    "neg_data = [read_file(x) for x in get_files(neg_data_path)[:2]]\n",
     "model = trainer.train(pos_data, neg_data, num_epochs=20, learning_rate=2e-5)"
    ],
    "metadata": {
@@ -48,8 +48,7 @@
     "model.save()"
    ],
    "metadata": {
-    "collapsed": false,
-    "is_executing": true
+    "collapsed": false
    },
    "id": "fae72c7ed78dd895",
    "execution_count": null
@@ -61,7 +60,7 @@
     "from lotc.embedding import long_text_embedding\n",
     "\n",
     "model = model.load()\n",
-    "model.predict(long_text_embedding('这是一个测试文本.', max_length=4096, chunk_size=256)[1])"
+    "model.predict(long_text_embedding('这是一个测试文本.', max_length=1024, chunk_size=256)[1])"
    ],
    "metadata": {
     "collapsed": false
