feat: 实现 bert encoder

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -57,10 +57,10 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from lotc.embedding import long_text_embedding\n",
+    "from lotc.encoder import long_text_encoder\n",
     "\n",
     "model = model.load()\n",
-    "model.predict(long_text_embedding('这是一个测试文本.', max_length=1024, chunk_size=256)[1])"
+    "model.predict(long_text_encoder('这是一个测试文本.', max_length=1024, chunk_size=256)[1])"
    ],
    "metadata": {
     "collapsed": false
