--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -16,12 +16,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-28T15:15:57.398293Z",
-     "start_time": "2025-04-28T15:15:57.386548Z"
+     "end_time": "2025-04-28T15:55:21.405004Z",
+     "start_time": "2025-04-28T15:55:11.089158Z"
     }
    },
    "id": "8b441028a169b686",
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -31,8 +31,8 @@
     "\n",
     "pos_data_path = './data/pos'\n",
     "neg_data_path = './data/neg'\n",
-    "pos_data = [read_file(x) for x in get_files(pos_data_path)[:2]]\n",
-    "neg_data = [read_file(x) for x in get_files(neg_data_path)[:2]]\n",
+    "pos_data = [read_file(x) for x in get_files(pos_data_path)]\n",
+    "neg_data = [read_file(x) for x in get_files(neg_data_path)]\n",
     "model = trainer.train(pos_data, neg_data, num_epochs=20, learning_rate=2e-5)"
    ],
    "metadata": {
