--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -9,19 +9,16 @@
     "trainer = FileBinaryClassifierTrainer(\n",
     "    max_length=1024,\n",
     "    chunk_size=256,\n",
+    "    overlapping=64,\n",
     "    batch_size=4,\n",
     "    train_ratio=0.9\n",
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-04-28T15:55:21.405004Z",
-     "start_time": "2025-04-28T15:55:11.089158Z"
-    }
+    "collapsed": false
    },
    "id": "8b441028a169b686",
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -36,7 +33,11 @@
     "model = trainer.train(pos_data, neg_data, num_epochs=20, learning_rate=2e-5)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-04-28T16:37:28.139214Z",
+     "start_time": "2025-04-28T16:37:28.138214Z"
+    }
    },
    "id": "3a4c4e31623b24e4",
    "execution_count": null
@@ -63,7 +64,11 @@
     "model.predict(long_text_encoder('这是一个测试文本.', max_length=1024, chunk_size=256)[1])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-04-28T16:37:28.141723Z",
+     "start_time": "2025-04-28T16:37:28.141723Z"
+    }
    },
    "id": "daf8dad84526a6a7",
    "execution_count": null
