--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,9 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "26a2d060b5494ae99cc533265c6422d4"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\project\\LTC-LongTextClassifier\\.venv\\lib\\site-packages\\huggingface_hub\\file_download.py:144: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in D:\\project\\LTC-LongTextClassifier\\deeplot\\.cache\\models--bert-base-uncased. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "dc00a435e95d48da808f838f67e2dee2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "923f6160d7e34965990d1e76a93d36f9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6b5b6a22560d4ef9abb5dab186fc945a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "model.safetensors:   0%|          | 0.00/440M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "cd26333b1bed43c2ab7f4e510d4725b6"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "from lotc import TextBinaryClassifierTrainer, LongTextEncoder\n",
+    "from deeplot import TextBinaryClassifierTrainer, LongTextEncoder\n",
     "\n",
     "long_text_encoder = LongTextEncoder(\n",
     "    max_length=2048,\n",
@@ -21,18 +98,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-06T03:04:13.457448Z",
-     "start_time": "2025-05-06T03:04:04.188255Z"
+     "start_time": "2025-05-08T02:53:10.515854Z"
     }
    },
    "id": "8b441028a169b686",
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from lotc.util import get_files, read_file\n",
+    "from deeplot.util import get_files, read_file\n",
     "\n",
     "pos_data_path = './data/pos'\n",
     "neg_data_path = './data/neg'\n",
