--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -8,13 +8,13 @@
     "\n",
     "long_text_encoder = LongTextEncoder(\n",
     "    max_length=2048,\n",
-    "    chunk_size=512,\n",
-    "    overlapping=128\n",
+    "    chunk_size=448,\n",
+    "    overlapping=32\n",
     ")\n",
     "\n",
     "trainer = TextBinaryClassifierTrainer(\n",
     "    long_text_encoder=long_text_encoder,\n",
-    "    batch_size=4,\n",
+    "    batch_size=2,\n",
     "    train_ratio=0.9\n",
     ")"
    ],
@@ -34,7 +34,7 @@
     "neg_data_path = './data/neg'\n",
     "pos_data = [read_file(x) for x in get_files(pos_data_path)]\n",
     "neg_data = [read_file(x) for x in get_files(neg_data_path)]\n",
-    "model = trainer.train(pos_data, neg_data, num_epochs=20, learning_rate=2e-5, train_loss_threshold=1)"
+    "model = trainer.train(pos_data, neg_data, num_epochs=36, learning_rate=2e-5, train_loss_threshold=0)"
    ],
    "metadata": {
     "collapsed": false
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "model = model.load()\n",
-    "model.predict(long_text_encoder.encode('这是一个测试文本.').squeeze())"
+    "model.predict(long_text_encoder.encode('这是一个测试文本.', flatten=False))"
    ],
    "metadata": {
     "collapsed": false
