--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -90,8 +90,8 @@
     "\n",
     "pos_data_path = './data/pos'\n",
     "neg_data_path = './data/neg'\n",
-    "pos_data = [read_file(x) for x in get_files(pos_data_path)][:1]\n",
-    "neg_data = [read_file(x) for x in get_files(neg_data_path)][:1]\n",
+    "pos_data = [read_file(x) for x in get_files(pos_data_path)]\n",
+    "neg_data = [read_file(x) for x in get_files(neg_data_path)]\n",
     "model = trainer.train(pos_data, neg_data, \n",
     "                      num_epochs=36, learning_rate=2e-5, \n",
     "                      balancing_dataset=True, alpha=1e-4, \n",
